Implement login, role-based redirect, admin and trainer dashboards

--- a/src/main/webapp/WEB-INF/views/program-list.html
+++ b/src/main/webapp/WEB-INF/views/program-list.html
@@ -17,7 +17,9 @@
 <h2 style="text-align:center;">HealthHubUTM Programs</h2>
 
 <div style="text-align:center;">
-    <a href="/program/create" class="btn btn-add">+ Add New Program</a>
+   <a th:href="@{/program/create}" class="btn btn-add">+ Add New Program</a>
+
+
 </div>
 
 <table>
