commited the cahbegs for creating the controller of teh program workout creation

--- a/src/main/webapp/WEB-INF/views/trainer-dashboard.html
+++ b/src/main/webapp/WEB-INF/views/trainer-dashboard.html
@@ -1,2 +1,5 @@
 <h2>Trainer Dashboard (Coming Soon)</h2>
 <a href="/healthhubutm/logout">Logout</a>
+<a th:href="@{/trainer/workout-plan/create}">
+    Create Workout Plan
+</a>
