add the workoutprgress for member

--- a/src/main/webapp/WEB-INF/views/member-dashboard.html
+++ b/src/main/webapp/WEB-INF/views/member-dashboard.html
@@ -26,6 +26,18 @@
         <a th:href="@{/member/my-programs}">My Programs</a>
     </li>
 
+
+   <li>
+<a th:href="@{/member/workouts}">
+    My Workout Plans
+</a>
+</li> 
+
+<li>
+<a th:href="@{/member/workouts}">
+    My Workout Plans
+</a>
+</li>
     <!-- Logout -->
     <li>
         <a th:href="@{/logout}">Logout</a>
