the workout plan list for the member

--- a/src/main/webapp/WEB-INF/views/trainer-dashboard.html
+++ b/src/main/webapp/WEB-INF/views/trainer-dashboard.html
@@ -3,3 +3,10 @@
 <a th:href="@{/trainer/workout-plan/create}">
     Create Workout Plan
 </a>
+
+<i>
+<a th:href="@{/trainer/monitor-workouts}"
+   class="btn btn-primary">
+    Monitor Member Workouts
+</a>
+</i>
