--- a/src/main/webapp/WEB-INF/views/trainer-dashboard.html
+++ b/src/main/webapp/WEB-INF/views/trainer-dashboard.html
@@ -61,6 +61,12 @@
         <a th:href="@{/trainer/workout-plan/create}" class="menu-item">
             💪 Create Workout Plan
         </a>
+        <i>
+<a th:href="@{/trainer/monitor-workouts}"
+   class="btn btn-primary">
+    Monitor Member Workouts
+</a>
+</i>
     </div>
 
     <a href="/healthhubutm/logout" class="logout-link">Logout</a>
