changed into 4 controllers

--- a/src/main/webapp/WEB-INF/views/bmi-form.html
+++ b/src/main/webapp/WEB-INF/views/bmi-form.html
@@ -7,7 +7,7 @@
 
 <h2>Enter BMI</h2>
 
-<form th:action="@{/bmi/calc}" method="post">
+<form th:action="@{/member/bmi/calc}" method="post">
 
     <label>Height (meters):</label>
     <input type="number" step="0.01" name="height" required />
