--- a/src/main/webapp/WEB-INF/views/bmi-result.html
+++ b/src/main/webapp/WEB-INF/views/bmi-result.html
@@ -19,9 +19,9 @@
 
 <br>
 
-<a th:href="@{/bmi/form}">Calculate Again</a>
+<a th:href="@{/member/bmi/form}">Calculate Again</a>
 <br>
-<a th:href="@{/bmi/history}">View BMI History</a>
+<a th:href="@{/member/bmi/history}">View BMI History</a>
 <br>
 <a th:href="@{/member/dashboard}">Back to Dashboard</a>
 
