--- a/src/main/webapp/WEB-INF/views/member-dashboard.html
+++ b/src/main/webapp/WEB-INF/views/member-dashboard.html
@@ -10,11 +10,11 @@
 <ul>
     <!-- BMI -->
     <li>
-        <a th:href="@{/bmi/form}">Enter BMI</a>
+        <a th:href="@{/member/bmi/form}">Enter BMI</a>
     </li>
 
     <li>
-        <a th:href="@{/bmi/history}">View BMI History</a>
+        <a th:href="@{/member/bmi/history}">View BMI History</a>
     </li>
 
     <!-- Programs -->
