--- a/src/main/webapp/WEB-INF/views/program-list.html
+++ b/src/main/webapp/WEB-INF/views/program-list.html
@@ -17,7 +17,7 @@
 <h2 style="text-align:center;">HealthHubUTM Programs</h2>
 
 <div style="text-align:center;">
-   <a th:href="@{/program/create}" class="btn btn-add">+ Add New Program</a>
+   <a th:href="@{/admin/program/create}" class="btn btn-add">+ Add New Program</a>
 
 
 </div>
@@ -45,8 +45,8 @@
             <td th:text="${p.monthlyFee}"></td>
 
             <td>
-                <a th:href="@{'/program/edit/' + ${p.id}}" class="btn btn-edit">Edit</a>
-                <a th:href="@{'/program/delete/' + ${p.id}}" class="btn btn-delete"
+                <a th:href="@{'/admin/program/edit/' + ${p.id}}" class="btn btn-edit">Edit</a>
+                <a th:href="@{'/admin/program/delete/' + ${p.id}}" class="btn btn-delete"
                    onclick="return confirm('Are you sure you want to delete this program?');">
                    Delete
                 </a>
